[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/CollectableManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/EnemyManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Main.gd" type="Script" id=5]
[ext_resource path="res://scenes/EntryMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/arcade-music-loop.wav" type="AudioStream" id=7]

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="EnemyManager" parent="." instance=ExtResource( 4 )]

[node name="CollectableManager" parent="." instance=ExtResource( 1 )]

[node name="EntryMenu" parent="." instance=ExtResource( 6 )]

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[connection signal="user_reset" from="HUD" to="." method="_on_HUD_user_reset"]
[connection signal="award_points" from="EnemyManager" to="." method="award_points"]
[connection signal="award_points" from="CollectableManager" to="." method="award_points"]
[connection signal="start_game" from="EntryMenu" to="." method="_on_EntryMenu_start_game"]
